Updated description day 24, and minor refactoring